@@ -1,0 +1,14 @@
+#' Names of 21 political divisions
+#'
+#' A dataset containing the country, state/province, and country/parish names of 21 political divisions.
+#'
+#' @format A data frame with 21 rows and 4 variables:
+#' \describe{
+#'   \item{user_id}{Unique integer indentifying each row}
+#'   \item{country}{Country names, possibly containing errors}
+#'   \item{state_province}{State names, possibly containing errors}
+#'   \item{county_parish}{County names, possibly containing errors}
+#'   ...
+#' }
+#' @source \url{https://github.com/ojalaquellueva/gnrs}
+"gnrs_testfile"
