@@ -1,22 +1,0 @@
-"user_id","country","state_province","county_parish"
-NA,"Russia","Lipetsk","Dobrovskiy rayon"
-NA,"Mexico","Sonora, Estado de","Hu√©pac"
-NA,"Guatemala","Izabal",""
-NA,"USA","Arizona","Pima County"
-NA,"U.S.A","Arizona","Pima"
-NA,"USA","Ilinois",""
-NA,"Mexico","Quintana Roo","L√°zaro C√°rdenas"
-NA,"Mexico","Quintana Roo","Municipio de L√°zaro C√°rdenas"
-NA,"Ukraine","Kharkiv","Novovodolaz'kyi"
-NA,"Canada","Province of Nova Scotia",""
-NA,"Germany","Niedersachsen","Emden"
-NA,"United States","Arkansas","Greene"
-NA,"Romania","Covasna","Intorsura Buzaului"
-NA,"United States","Kansas","Jewell"
-NA,"Mexico","Chiapas","Villa Corzo"
-NA,"Romania","Cluj","Marisel"
-NA,"Mexico","Nuevo Le√≥n","Los Aldamas"
-NA,"South Korea","Busan","Haeundae"
-NA,"Mexico","Guanajuato","Jer√©cuaro"
-NA,"Colombia","Cundinamarca","Medina"
-NA,"Thailand","Chaiyaphum","Nong Bua Daeng"
