@@ -1,0 +1,26 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/data.R
+\docType{data}
+\name{gnrs_testfile}
+\alias{gnrs_testfile}
+\title{Names of 21 political divisions}
+\format{
+A data frame with 21 rows and 4 variables:
+\describe{
+  \item{user_id}{Unique integer indentifying each row}
+  \item{country}{Country names, possibly containing errors}
+  \item{state_province}{State names, possibly containing errors}
+  \item{county_parish}{County names, possibly containing errors}
+  ...
+}
+}
+\source{
+\url{https://github.com/ojalaquellueva/gnrs}
+}
+\usage{
+gnrs_testfile
+}
+\description{
+A dataset containing the country, state/province, and country/parish names of 21 political divisions.
+}
+\keyword{datasets}
