@@ -3,13 +3,7 @@ context("gnrs")
 
 test_that("example works", {
   
-  gnrs_testfile <- 
-  read.csv(system.file("extdata",
-                       "gnrs_testfile.csv",
-                       package = "GNRS",
-                       mustWork = TRUE),
-           stringsAsFactors = FALSE)
-  
+
   results <- GNRS(political_division_dataframe = gnrs_testfile)
   
 
